# CRag

./: .gitignore  ingestion.py  main.py  pyproject.toml  tempCodeRunnerFile.py
graph/: consts.py  ingestion.py  state.py  workflow.py
graph/chain/: generation.py  retriever_grader.py
graph/chain/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  gradeDocuments.py  retrieve.py  web_search.py
